<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_event_program"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/menu_event_program" />
        <item
            android:id="@+id/nav_find_location"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_find_location" />
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_speaker_group_black_24dp"
            android:title="@string/menu_speakers" />
    </group>

    <item android:title="Preference">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
